--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,73 +198,72 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterdays results">
-            <h2 class="date">wednesday 17/4/2024</h2>
+            <h2 class="date">thursday 18/4/2024</h2>
             <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">4 - 53 - 10 - 23 - 70</p>
-                <p class="machine">85 - 13 - 29 - 36 - 83</p>        
+                <h3 class="game">People</h3>
+                <p class="winning">35 - 62 - 20 - 82 - 86</p>
+                <p class="machine">3 - 41 - 51 - 66 - 72</p>        
             </article>
             <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">38 - 2 - 90 - 14 - 35</p>
-                <p class="machine">57 - 82 - 51 - 75 - 85</p>        
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">47 - 26 - 71 - 77 - 30</p>
+                <p class="machine">68 - 7 - 17 - 29 - 80</p>        
             </article>
             <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">66 - 80 - 7 - 18 - 6</p>
-                <p class="machine">82 - 56 - 89 - 74 - 24</p>        
+                <h3 class="game">Diamond</h3>
+                <p class="winning">72 - 8 - 57 - 29 - 83</p>
+                <p class="machine">22 - 14 - 23 - 39 - 2</p>        
             </article>
             <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">36 - 14 - 35 - 26 - 9</p>
-                <p class="machine">4 - 11 - 1 - 75 - 41</p>        
+                <h3 class="game">International</h3>
+                <p class="winning">75 - 24 - 79 - 62 - 14</p>
+                <p class="machine">15 - 82 - 86 - 46 - 43</p>        
             </article>
             <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">38 - 1 - 88 - 71 - 84</p>
-                <p class="machine">22 - 12 - 40 - 90 - 50</p>        
+                <h3 class="game">fortune</h3>
+                <p class="winning">2 - 51 - 57 - 29 - 28</p>
+                <p class="machine">67 - 43 - 42 - 46 - 18</p>        
             </article>
             <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">6 - 15 - 67 - 42 - 18</p>
-                <p class="machine">87 - 24 - 79 - 30 - 31</p>        
+                <h3 class="game">Bingo</h3>
+                <p class="winning">20 - 64 - 57 - 21 - 48</p>
+                <p class="machine">61 - 18 - 82 - 83 - 26</p>        
             </article>
         </section>
 
-        
-    <section aria-label="today result">
-        <h2 class="date">thursday 18/4/2024</h2>
-        <article>
-            <h3 class="game">People</h3>
-            <p class="winning">35 - 62 - 20 - 82 - 86</p>
-            <p class="machine">3 - 41 - 51 - 66 - 72</p>        
-        </article>
-        <article>
-            <h3 class="game">Fair Chance</h3>
-            <p class="winning">47 - 26 - 71 - 77 - 30</p>
-            <p class="machine">68 - 7 - 17 - 29 - 80</p>        
-        </article>
-        <article>
-            <h3 class="game">Diamond</h3>
-            <p class="winning">72 - 8 - 57 - 29 - 83</p>
-            <p class="machine">22 - 14 - 23 - 39 - 2</p>        
-        </article>
-        <article>
-            <h3 class="game">International</h3>
-            <p class="winning">75 - 24 - 79 - 62 - 14</p>
-            <p class="machine">15 - 82 - 86 - 46 - 43</p>        
-        </article>
-        <article>
-            <h3 class="game">fortune</h3>
-            <p class="winning">2 - 51 - 57 - 29 - 28</p>
-            <p class="machine">67 - 43 - 42 - 46 - 18</p>        
-        </article>
-        <article>
-            <h3 class="game">Bingo</h3>
-            <p class="winning">20 - 64 - 57 - 21 - 48</p>
-            <p class="machine">61 - 18 - 82 - 83 - 26</p>        
-        </article>
-    </section>
+        <section aria-label="today result">
+            <h2 class="date">friday 19/4/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">35 - 59 - 24 - 27 - 3</p>
+                <p class="machine">54 - 16 - 15 - 65 - 43</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+        </section>
     </div>
     
     <div class="gameList">
