--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -239,9 +239,9 @@
                 <p class="machine">54 - 16 - 15 - 65 - 43</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Metro</h3>
+                <p class="winning">26 - 34 - 16 - 55 - 71</p>
+                <p class="machine">89 - 82 - 31 - 39 - 80</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
