--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -244,24 +244,24 @@
                 <p class="machine">89 - 82 - 31 - 39 - 80</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Gold</h3>
+                <p class="winning">66 - 72 - 67 - 57 - 8</p>
+                <p class="machine">1 - 31 - 25 - 7 - 48</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">67 - 11 - 58 - 8 - 65</p>
+                <p class="machine">46 - 87 - 85 - 61 - 32</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">20 - 17 - 49 - 23 - 8</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">vag</h3>
+                <p class="winning">88 - 17 - 9 - 12 - 85</p>
+                <p class="machine">49 - 72 - 28 - 90 - 16</p>        
             </article>
         </section>
     </div>
