--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -682,14 +682,14 @@
             <tbody>
                 <tr>
                     <td class="serial-num">16</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>April 19th</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">20</td>
+                    <td class="winning">17</td>
+                    <td class="winning">49</td>
+                    <td class="winning">23</td>
+                    <td class="winning" id="lbw">8</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
