--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterdays results">
-            <h2 class="date">thursday 18/4/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">35 - 62 - 20 - 82 - 86</p>
-                <p class="machine">3 - 41 - 51 - 66 - 72</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">47 - 26 - 71 - 77 - 30</p>
-                <p class="machine">68 - 7 - 17 - 29 - 80</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">72 - 8 - 57 - 29 - 83</p>
-                <p class="machine">22 - 14 - 23 - 39 - 2</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">75 - 24 - 79 - 62 - 14</p>
-                <p class="machine">15 - 82 - 86 - 46 - 43</p>        
-            </article>
-            <article>
-                <h3 class="game">fortune</h3>
-                <p class="winning">2 - 51 - 57 - 29 - 28</p>
-                <p class="machine">67 - 43 - 42 - 46 - 18</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">20 - 64 - 57 - 21 - 48</p>
-                <p class="machine">61 - 18 - 82 - 83 - 26</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">friday 19/4/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Bonanza</h3>
                 <p class="winning">20 - 17 - 49 - 23 - 8</p>
-                <p class="machine"></p>        
+                <p class="machine">60 - 54 - 83 - 41 - 84</p>        
             </article>
             <article>
                 <h3 class="game">vag</h3>
                 <p class="winning">88 - 17 - 9 - 12 - 85</p>
                 <p class="machine">49 - 72 - 28 - 90 - 16</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">saturday 20/4/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">35 - 3 - 20 - 21 - 25</p>
+                <p class="machine">30 - 67 - 10 - 38 - 56</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
