--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -239,29 +239,29 @@
                 <p class="machine">30 - 67 - 10 - 38 - 56</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Super</h3>
+                <p class="winning">27 - 61 - 82 - 21 - 37</p>
+                <p class="machine">52 - 36 - 58 - 12 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">4 - 55 - 20 - 77 - 46</p>
+                <p class="machine">76 - 59 - 14 - 73 - 72</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">48 - 24 - 64 - 80 - 17</p>
+                <p class="machine">77 - 57 - 85 - 30 - 36</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">57 - 8 - 40 - 76 - 17</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">9 - 84 - 25 - 8 - 48</p>
+                <p class="machine">75 - 2 - 45 - 22 - 18</p>        
             </article>
         </section>
     </div>
