--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterdays results">
-            <h2 class="date">friday 19/4/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">35 - 59 - 24 - 27 - 3</p>
-                <p class="machine">54 - 16 - 15 - 65 - 43</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">26 - 34 - 16 - 55 - 71</p>
-                <p class="machine">89 - 82 - 31 - 39 - 80</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">66 - 72 - 67 - 57 - 8</p>
-                <p class="machine">1 - 31 - 25 - 7 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">67 - 11 - 58 - 8 - 65</p>
-                <p class="machine">46 - 87 - 85 - 61 - 32</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">20 - 17 - 49 - 23 - 8</p>
-                <p class="machine">60 - 54 - 83 - 41 - 84</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">88 - 17 - 9 - 12 - 85</p>
-                <p class="machine">49 - 72 - 28 - 90 - 16</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">saturday 20/4/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">National</h3>
                 <p class="winning">57 - 8 - 40 - 76 - 17</p>
-                <p class="machine"></p>        
+                <p class="machine">70 - 49 - 36 - 33 - 30</p>        
             </article>
             <article>
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">9 - 84 - 25 - 8 - 48</p>
                 <p class="machine">75 - 2 - 45 - 22 - 18</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">sunday 21/04/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">14 - 15 - 44 - 65 - 86</p>
+                <p class="machine">77 - 72 - 23 - 66 - 39</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">3 - 61 - 88 - 7 - 38</p>
+                <p class="machine">54 - 16 - 80 - 37 - 85</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">90 - 85 - 67 - 79 - 11</p>
+                <p class="machine">33 - 47 - 88 - 6 - 58</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">89 - 28 - 37 - 75 - 36</p>
+                <p class="machine">80 - 65 - 46 - 14 - 36</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">1 - 89 - 54 - 2 - 27</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">43 - 45 - 40 - 67 - 81</p>
+                <p class="machine">56 - 52 - 10 - 48 - 13</p>        
             </article>
         </section>
     </div>
