April 22/monday/24 Diamond

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterdays results">
-            <h2 class="date">saturday 20/4/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">35 - 3 - 20 - 21 - 25</p>
-                <p class="machine">30 - 67 - 10 - 38 - 56</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">27 - 61 - 82 - 21 - 37</p>
-                <p class="machine">52 - 36 - 58 - 12 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">4 - 55 - 20 - 77 - 46</p>
-                <p class="machine">76 - 59 - 14 - 73 - 72</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">48 - 24 - 64 - 80 - 17</p>
-                <p class="machine">77 - 57 - 85 - 30 - 36</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">57 - 8 - 40 - 76 - 17</p>
-                <p class="machine">70 - 49 - 36 - 33 - 30</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">9 - 84 - 25 - 8 - 48</p>
-                <p class="machine">75 - 2 - 45 - 22 - 18</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">sunday 21/04/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">43 - 45 - 40 - 67 - 81</p>
                 <p class="machine">56 - 52 - 10 - 48 - 13</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">Monday 22/04/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">68 - 2 - 78 - 70 - 34</p>
+                <p class="machine">5 - 77 - 37 - 6 - 52</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
