--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -239,14 +239,14 @@
                 <p class="machine">5 - 77 - 37 - 6 - 52</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">People</h3>
+                <p class="winning">60 - 75 - 72 - 24 - 79</p>
+                <p class="machine">30 - 55 - 32 - 78 - 56</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Bingo</h3>
+                <p class="winning">69 - 86 - 51 - 87 - 47</p>
+                <p class="machine">71 - 68 - 76 - 2 - 79</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
