--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -222,7 +222,7 @@
             <article>
                 <h3 class="game">Aseda</h3>
                 <p class="winning">1 - 89 - 54 - 2 - 27</p>
-                <p class="machine"></p>        
+                <p class="machine">18 - 59 - 68 - 30 - 41</p>        
             </article>
             <article>
                 <h3 class="game">Tota</h3>
@@ -249,19 +249,19 @@
                 <p class="machine">71 - 68 - 76 - 2 - 79</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Metro</h3>
+                <p class="winning">66 - 61 - 33 - 35 - 50</p>
+                <p class="machine">54 - 70 - 62 - 2 - 78</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">85 - 35 - 7 - 59 - 54</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">International</h3>
+                <p class="winning">65 - 41 - 71 - 70 - 37</p>
+                <p class="machine">49 - 89 - 38 - 14 - 77</p>        
             </article>
         </section>
     </div>
