--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -710,11 +710,11 @@
                     <td class="winning" id="lbw">27</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">18</td>
+                    <td class="machine">59</td>
+                    <td class="machine">68</td>
+                    <td class="machine">30</td>
+                    <td class="machine" id="lbm">41</td>
                 </tr>
             </tbody>
 
