April 23 Morning results

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterdays results">
-            <h2 class="date">sunday 21/04/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">14 - 15 - 44 - 65 - 86</p>
-                <p class="machine">77 - 72 - 23 - 66 - 39</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">3 - 61 - 88 - 7 - 38</p>
-                <p class="machine">54 - 16 - 80 - 37 - 85</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">90 - 85 - 67 - 79 - 11</p>
-                <p class="machine">33 - 47 - 88 - 6 - 58</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">89 - 28 - 37 - 75 - 36</p>
-                <p class="machine">80 - 65 - 46 - 14 - 36</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">1 - 89 - 54 - 2 - 27</p>
-                <p class="machine">18 - 59 - 68 - 30 - 41</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">43 - 45 - 40 - 67 - 81</p>
-                <p class="machine">56 - 52 - 10 - 48 - 13</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">Monday 22/04/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">International</h3>
                 <p class="winning">65 - 41 - 71 - 70 - 37</p>
                 <p class="machine">49 - 89 - 38 - 14 - 77</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">tuesday 23/04/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">36 - 39 - 7 - 73 - 24</p>
+                <p class="machine">1 - 77 - 17 - 6 - 38</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
