--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -239,9 +239,9 @@
                 <p class="machine">1 - 77 - 17 - 6 - 38</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">75 - 90 - 14 - 70 - 82</p>
+                <p class="machine">81 - 10 - 64 - 48 - 57</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
