--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -222,7 +222,7 @@
             <article>
                 <h3 class="game">MSP</h3>
                 <p class="winning">85 - 35 - 7 - 59 - 54</p>
-                <p class="machine"></p>        
+                <p class="machine">70 - 81 - 36 - 50 - 47</p>        
             </article>
             <article>
                 <h3 class="game">International</h3>
@@ -239,29 +239,29 @@
                 <p class="machine">1 - 77 - 17 - 6 - 38</p>        
             </article>
             <article>
+                <h3 class="game">06</h3>
+                <p class="winning">49 - 39 - 19 - 26 - 55</p>
+                <p class="machine">52 - 80 - 1 - 9 - 61</p>        
+            </article>
+            <article>
                 <h3 class="game">Jackpot</h3>
                 <p class="winning">75 - 90 - 14 - 70 - 82</p>
                 <p class="machine">81 - 10 - 64 - 48 - 57</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">62 - 14 - 23 - 58 - 44</p>
+                <p class="machine">56 - 41 - 50 - 13 - 17</p>        
+            </article>
+            <article>
+                <h3 class="game">lucky G</h3>
+                <p class="winning">87 - 86 - 81 - 5 - 72</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Super</h3>
+                <p class="winning">49 - 35 - 77 - 80 - 48</p>
+                <p class="machine">32 - 2 - 55 - 65 - 14</p>        
             </article>
         </section>
     </div>
