--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -721,11 +721,11 @@
                     <td class="winning" id="lbw">72</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">63</td>
+                    <td class="machine">1</td>
+                    <td class="machine">84</td>
+                    <td class="machine">71</td>
+                    <td class="machine" id="lbm">9</td>
                 </tr>
             </tbody>
 
