--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterdays results">
-            <h2 class="date">Monday 22/04/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">68 - 2 - 78 - 70 - 34</p>
-                <p class="machine">5 - 77 - 37 - 6 - 52</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">60 - 75 - 72 - 24 - 79</p>
-                <p class="machine">30 - 55 - 32 - 78 - 56</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">69 - 86 - 51 - 87 - 47</p>
-                <p class="machine">71 - 68 - 76 - 2 - 79</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">66 - 61 - 33 - 35 - 50</p>
-                <p class="machine">54 - 70 - 62 - 2 - 78</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">85 - 35 - 7 - 59 - 54</p>
-                <p class="machine">70 - 81 - 36 - 50 - 47</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">65 - 41 - 71 - 70 - 37</p>
-                <p class="machine">49 - 89 - 38 - 14 - 77</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">tuesday 23/04/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">lucky G</h3>
                 <p class="winning">87 - 86 - 81 - 5 - 72</p>
-                <p class="machine"></p>        
+                <p class="machine">63 - 1 - 84 - 71 - 9</p>        
             </article>
             <article>
                 <h3 class="game">Super</h3>
                 <p class="winning">49 - 35 - 77 - 80 - 48</p>
                 <p class="machine">32 - 2 - 55 - 65 - 14</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">wednesday 24/4/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">76 - 19 - 72 - 85 - 6</p>
+                <p class="machine">24 - 31 - 11 - 44 - 34</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
