--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -239,9 +239,9 @@
                 <p class="machine">24 - 31 - 11 - 44 - 34</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">mark ii</h3>
+                <p class="winning">26 - 65 - 51 - 9 - 44</p>
+                <p class="machine">21 - 43 - 83 - 3 - 48</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
