--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -244,9 +244,9 @@
                 <p class="machine">21 - 43 - 83 - 3 - 48</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">vag</h3>
+                <p class="winning">6 - 73 - 50 - 28 - 62</p>
+                <p class="machine">57 - 2 - 18 - 24 - 30</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
