--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">57 - 2 - 18 - 24 - 30</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">63 - 43 - 31 - 88 - 61</p>
+                <p class="machine">65 - 38 - 83 - 24 - 90</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">76 - 20 - 57 - 71 - 44</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">81 - 62 - 22 - 2 - 17</p>
+                <p class="machine">4 - 32 - 48 - 82 - 79</p>        
             </article>
         </section>
     </div>
