--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="./GAMES/viewStyle.css">
-        <link rel="stylesheet" href="/review-and-demo.css">
+        <!-- <link rel="stylesheet" href="/review-and-demo.css"> -->
 
 
     </head>
@@ -94,31 +94,11 @@
             </aside>
         </div> -->
 
-        <div id="review-and-demo-container">
-            <div id="demo">
-                <p>Hi there, </p>
-                <div id="animation">
-                    <div class="we-have">
-                        <div>we have some articles</div>
-                    </div>
-                    <div class="that-might">
-                        <div>that might interest you</div>
-                    </div>
-                    <div class="you">
-                        <div>click on "article"</div>
-                    </div>
-                   
-                </div>
-                <a href="https://insights.hologutibusinesscentre.com/interest/FG-large-and-MSME_loan" target="_blank" id="link">
-                    <span id="the-article">Article</span>
-                </a>
-            </div>
-            <div id="review">
-                <p id="rate-our-page">Rate our page on Google <br>
-            </div>
-            <a id="google-review-link" href="https://g.page/r/CcKUCr5g5b_JEBI/review" target="_blank">Click here to Review  <i class="fa-solid fa-star-half-stroke"></i></a></p>
+        <!-- <div id="demo-passage">
+            <iframe src="/demo-and-review.html" scrolling="no" id="that" style="text-align: center;"></iframe>
 
-        </div>
+        </div> -->
+
        
         <a href="#" id="top" aria-label="scroll up"><i class="fa-solid fa-arrow-up"></i></a>
 
