--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -719,11 +719,11 @@
                     <td class="winning" id="lbw">44</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">55</td>
+                    <td class="machine">66</td>
+                    <td class="machine">2</td>
+                    <td class="machine">41</td>
+                    <td class="machine" id="lbm">54</td>
                 </tr>
             </tbody> 
 
