--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterdays results">
-            <h2 class="date">tuesday 23/04/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">36 - 39 - 7 - 73 - 24</p>
-                <p class="machine">1 - 77 - 17 - 6 - 38</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">49 - 39 - 19 - 26 - 55</p>
-                <p class="machine">52 - 80 - 1 - 9 - 61</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">75 - 90 - 14 - 70 - 82</p>
-                <p class="machine">81 - 10 - 64 - 48 - 57</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">62 - 14 - 23 - 58 - 44</p>
-                <p class="machine">56 - 41 - 50 - 13 - 17</p>        
-            </article>
-            <article>
-                <h3 class="game">lucky G</h3>
-                <p class="winning">87 - 86 - 81 - 5 - 72</p>
-                <p class="machine">63 - 1 - 84 - 71 - 9</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">49 - 35 - 77 - 80 - 48</p>
-                <p class="machine">32 - 2 - 55 - 65 - 14</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">wednesday 24/4/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Midweek</h3>
                 <p class="winning">76 - 20 - 57 - 71 - 44</p>
-                <p class="machine"></p>        
+                <p class="machine">55 - 66 - 2 - 41 - 54</p>        
             </article>
             <article>
                 <h3 class="game">Lucky</h3>
                 <p class="winning">81 - 62 - 22 - 2 - 17</p>
                 <p class="machine">4 - 32 - 48 - 82 - 79</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">thursday 25/04/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">44 - 59 - 68 - 9 - 18</p>
+                <p class="machine">56 - 39 - 29 - 53 - 5</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
