--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -239,14 +239,14 @@
                 <p class="machine">56 - 39 - 29 - 53 - 5</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">3 - 84 - 48 - 37 - 58</p>
+                <p class="machine">86 - 67 - 90 - 18 - 66</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Diamond</h3>
+                <p class="winning">13 - 51 - 15 - 8 - 12</p>
+                <p class="machine">84 - 39 - 37 - 89 - 17</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
