--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">84 - 39 - 37 - 89 - 17</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">International</h3>
+                <p class="winning">50 - 55 - 46 - 77 - 68</p>
+                <p class="machine">42 - 12 - 63 - 78 - 70</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">89 - 6 - 35 - 23 - 47</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Bingo</h3>
+                <p class="winning">10 - 36 - 81 - 30 - 27</p>
+                <p class="machine">83 - 25 - 86 - 53 - 37</p>        
             </article>
         </section>
     </div>
