--- a/GAMES/5Inter.html
+++ b/GAMES/5Inter.html
@@ -1371,21 +1371,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">33</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>April 25th thurs</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">50</td>
+                    <td class="winning">55</td>
+                    <td class="winning">46</td>
+                    <td class="winning">77</td>
+                    <td class="winning" id="lbw">68</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">42</td>
+                    <td class="machine">12</td>
+                    <td class="machine">63</td>
+                    <td class="machine">78</td>
+                    <td class="machine" id="lbm">70</td>
                 </tr>
             </tbody>
 
