--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterdays results">
-            <h2 class="date">wednesday 24/4/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">76 - 19 - 72 - 85 - 6</p>
-                <p class="machine">24 - 31 - 11 - 44 - 34</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">26 - 65 - 51 - 9 - 44</p>
-                <p class="machine">21 - 43 - 83 - 3 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">6 - 73 - 50 - 28 - 62</p>
-                <p class="machine">57 - 2 - 18 - 24 - 30</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">63 - 43 - 31 - 88 - 61</p>
-                <p class="machine">65 - 38 - 83 - 24 - 90</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">76 - 20 - 57 - 71 - 44</p>
-                <p class="machine">55 - 66 - 2 - 41 - 54</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">81 - 62 - 22 - 2 - 17</p>
-                <p class="machine">4 - 32 - 48 - 82 - 79</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">thursday 25/04/2024</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -256,7 +222,7 @@
             <article>
                 <h3 class="game">Fortune</h3>
                 <p class="winning">89 - 6 - 35 - 23 - 47</p>
-                <p class="machine"></p>        
+                <p class="machine">39 - 37 - 38 - 19 - 41</p>        
             </article>
             <article>
                 <h3 class="game">Bingo</h3>
@@ -264,6 +230,41 @@
                 <p class="machine">83 - 25 - 86 - 53 - 37</p>        
             </article>
         </section>
+
+        
+    <section aria-label="today result">
+        <h2 class="date">friday 26/4/2024</h2>
+        <article>
+            <h3 class="game">Royal</h3>
+            <p class="winning">70 - 45 - 75 - 17 - 9</p>
+            <p class="machine">20 - 90 - 8 - 61 - 6</p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+    </section>
     </div>
     
     <div class="gameList">
