--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -240,9 +240,9 @@
             <p class="machine">20 - 90 - 8 - 61 - 6</p>        
         </article>
         <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
+            <h3 class="game">Metro</h3>
+            <p class="winning">15 - 57 - 2 - 86 - 35</p>
+            <p class="machine">59 - 72 - 26 - 20 - 83</p>        
         </article>
         <article>
             <h3 class="game"></h3>
